--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.10.0",
+    "cloudinary": "^2.7.0",
+    "mongoose": "^8.16.4",
     "next": "15.4.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
